# APIBook

./: .hg_archival.txt  .hgignore  CMakeLists.txt
02_Qualities/: CMakeLists.txt
02_Qualities/callback_instance/: CMakeLists.txt
02_Qualities/callback_static/: CMakeLists.txt
02_Qualities/coord2d_template/: CMakeLists.txt
02_Qualities/hide_class/: CMakeLists.txt
02_Qualities/shared_pointer/: CMakeLists.txt
03_Patterns/: CMakeLists.txt
03_Patterns/adapter/: CMakeLists.txt
03_Patterns/facade/: CMakeLists.txt
03_Patterns/factory_extensible/: CMakeLists.txt
03_Patterns/factory_simple/: CMakeLists.txt
03_Patterns/observer/: CMakeLists.txt
03_Patterns/opaque_pointer/: CMakeLists.txt
03_Patterns/pimpl_bad/: CMakeLists.txt
03_Patterns/pimpl_boost/: CMakeLists.txt
03_Patterns/pimpl_good/: CMakeLists.txt
03_Patterns/proxy_interface/: CMakeLists.txt
03_Patterns/proxy_simple/: CMakeLists.txt
03_Patterns/singleton/: CMakeLists.txt
04_Design/: CMakeLists.txt
04_Design/named_parameters/: CMakeLists.txt
05_Styles/: CMakeLists.txt
05_Styles/stack_c/: CMakeLists.txt
05_Styles/stack_cpp/: CMakeLists.txt
05_Styles/stack_datadriven/: CMakeLists.txt  stack.h~
05_Styles/stack_preprocessor/: CMakeLists.txt
05_Styles/stack_template/: CMakeLists.txt
06_Cpp_Style/: CMakeLists.txt
06_Cpp_Style/bad_friends/: CMakeLists.txt
06_Cpp_Style/constructors/: CMakeLists.txt
06_Cpp_Style/extern_leakage/: CMakeLists.txt
06_Cpp_Style/operators/: CMakeLists.txt
06_Cpp_Style/template_explicit/: CMakeLists.txt
06_Cpp_Style/template_polymorphism/: CMakeLists.txt
06_Cpp_Style/template_specialization/: CMakeLists.txt
07_Performance/: CMakeLists.txt
07_Performance/auto_timer/: CMakeLists.txt
07_Performance/const_reference/: CMakeLists.txt
07_Performance/copy_on_write/: CMakeLists.txt
07_Performance/getter_speed/: CMakeLists.txt
07_Performance/iterators/: CMakeLists.txt
07_Performance/struct_size/: CMakeLists.txt
07_Performance/virtual_speed/: CMakeLists.txt
08_Versioning/: CMakeLists.txt
08_Versioning/deprecate_compiletime/: CMakeLists.txt
08_Versioning/deprecate_runtime/: CMakeLists.txt
08_Versioning/version_api/: CMakeLists.txt
09_Documentation/: CMakeLists.txt
10_Testing/: CMakeLists.txt
10_Testing/self_test/: CMakeLists.txt
10_Testing/unit_test/: CMakeLists.txt
10_Testing/wargame/: CMakeLists.txt
11_Scripting/: CMakeLists.txt
11_Scripting/python/: CMakeLists.txt
11_Scripting/ruby/: CMakeLists.txt
12_Extensibility/: CMakeLists.txt
12_Extensibility/curious_templates/: CMakeLists.txt
12_Extensibility/plugin_api/: CMakeLists.txt
12_Extensibility/visitor/: CMakeLists.txt
AA_Libraries/: CMakeLists.txt
AA_Libraries/gcc_entry_point/: CMakeLists.txt
AA_Libraries/gcc_plugin/: CMakeLists.txt
